--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
